--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-
+  <img id="top-background" src="/images/bg-pattern-top.svg"></img>
   <div class="card-container">
 
     <div class="card-header">
@@ -45,6 +45,8 @@
       </div>
     </div>
   </div>
+
+  <!-- <img #id="bottom-background" src="/images/bg-pattern-bottom.svg" alt=""> -->
 
   <footer>
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Natasha Johnson</a>.
