--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Profile card component</title>
 
 </head>
+
 <body>
   <img id="top-background" src="/images/bg-pattern-top.svg"></img>
   <div class="card-container">
@@ -49,8 +52,10 @@
   <!-- <img #id="bottom-background" src="/images/bg-pattern-bottom.svg" alt=""> -->
 
   <footer>
-    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Natasha Johnson</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+      <a href="#">Natasha Johnson</a>.
     </p>
   </footer>
 </body>
+
 </html>
