--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-  <img id="top-background" src="/images/bg-pattern-top.svg"></img>
+  <img id="top-background" src="./images/bg-pattern-top.svg"></img>
   <div class="card-container">
 
     <div class="card-header">
-      <img src="/images/bg-pattern-card.svg" alt="">
+      <img src="./images/bg-pattern-card.svg" alt="">
     </div>
 
-    <img id="profile" src="/images/image-victor.jpg" alt="">
+    <img id="profile" src="./images/image-victor.jpg" alt="">
 
     <div class="card-bottom">
 
