--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 </head>
 
-<body>
-  <img id="top-background" src="./images/bg-pattern-top.svg"></img>
+<img>
+
+  <img class="top" src="./images/bg-pattern-top.svg"></img>
+  
   <div class="card-container">
 
     <div class="card-header">
@@ -49,7 +51,7 @@
     </div>
   </div>
 
-  <!-- <img #id="bottom-background" src="/images/bg-pattern-bottom.svg" alt=""> -->
+  <img class="bottom" src="./images/bg-pattern-bottom.svg" alt=""></img>
 
   <footer>
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
